Fixes lots of spacing issues

--- a/wp-content/themes/cmp/assets/styles/modules/_breadcrumb.scss
+++ b/wp-content/themes/cmp/assets/styles/modules/_breadcrumb.scss
@@ -11,7 +11,7 @@
 .nav-breadcrumb {
   width: 100%;
   display:flex;
-  padding: 0.5em 0;
+  margin-top: 0.5em;
 
   a {
     font-size:.9em;
@@ -29,6 +29,10 @@
   @include grid-media($medium) {
     display: none;
   }
+}
+
+.large-title + .nav-breadcrumb, .hero-header__words-box + .breadcrumb-container .nav-breadcrumb {
+  margin-top: 0;
 }
 
 hr.breadcrumb-hr {
