--- a/wp-content/themes/cmp/assets/styles/pages/_event-spaces.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_event-spaces.scss
@@ -1,11 +1,6 @@
 // Great Events Spaces landing page.
 
 .event-spaces {
-  .content-container {
-    // padding-top: 1em;
-    padding-bottom: $small-spacing;
-  }
-
   .spaces {
     display: flex;
     justify-content: space-between;
