--- a/wp-content/themes/cmp/assets/styles/pages/_member-perks.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_member-perks.scss
@@ -38,3 +38,8 @@
     margin: $small-spacing 0 0 0;
   }
 }
+
+.contact-us {
+  margin-top: $small-spacing;
+  margin-bottom: $base-spacing;
+}
